--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,11 @@
                 <artifactId>reporting-plugin</artifactId>
                 <version>7.3.0</version>
             </dependency>
-
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.25</version>
+        </dependency>
     </dependencies>
 
 </project>
