--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,8 @@
                       <threadCount>4</threadCount>-->
                     <testFailureIgnore>true</testFailureIgnore>
                     <includes>
-                        <include>**/*Runner.java</include>
+                        <include>/*CukesRunner.java</include>
+                        <include>/*FailedRunner.java</include>
                     </includes>
                 </configuration>
             </plugin>
