--- a/pom.xml
+++ b/pom.xml
@@ -15,15 +15,11 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.plugin.version>4.0.0</maven.compiler.plugin.version>
+        <maven-surefire-plugin-version>3.0.0-M5</maven-surefire-plugin-version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
-            <scope>test</scope>
-        </dependency>
 
             <dependency>
                 <groupId>io.rest-assured</groupId>
@@ -90,26 +86,41 @@
             <version>8.0.25</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-junit4 -->
+
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-cucumber-jvm</artifactId>
+            <version>2.20.1</version>
+        </dependency>
+
 
 
     </dependencies>
 
-
     <build>
         <plugins>
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.8</version>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
                 <configuration>
-                    <!--<parallel>methods</parallel>
-                        <threadCount>4</threadCount>-->
-                      <testFailureIgnore>true</testFailureIgnore>
+                   <parallel>methods</parallel>
+                        <threadCount>4</threadCount>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <runOrder>Alphabetical</runOrder>
                     <includes>
-                        <include>/*CukesRunner.java</include>
-                     </includes>
-                 </configuration>
-             </plugin>
+                        <include>**/*CukesRunner.java</include>
+                        <include>**/*FaileTestRunner.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
          </plugins>
      </build>
 
