--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
         <maven-surefire-plugin-version>3.0.0-M5</maven-surefire-plugin-version>
     </properties>
 
+
+
+
     <dependencies>
 
             <dependency>
@@ -90,20 +93,19 @@
 
         <dependency>
             <groupId>io.qameta.allure</groupId>
-            <artifactId>allure-cucumber-jvm</artifactId>
-            <version>2.20.1</version>
+            <artifactId>allure-cucumber7-jvm</artifactId>
+            <version>2.21.0</version>
         </dependency>
-
-
-
     </dependencies>
+
+
 
     <build>
         <plugins>
             <plugin>
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
-                <version>2.8</version>
+                <version>2.10.0</version>
             </plugin>
 
             <plugin>
@@ -127,3 +129,4 @@
 
 
  </project>
+
